# xg

./: INSTALL.md  OPTIMIZATION_REPORT.md  README.md  pyproject.toml  setup.py  test_cli_functionality.py  test_gpu_functionality.py  test_parallelism_features.py
examples/: advanced_cluster_matmul.xg  cluster_matmul.xg  run_examples.sh
tests/: test_cli.py  test_xg_language.py
xg/: __init__.py  ast.py  cli.py  compiler.py  engine.py  errors.py  interpreter.py  parser.py  runtime.py  typechecker.py  types.py
